# Cacus-Red

./: .gitignore  README.md
repo/: README.md
repo/mycode/apps/Project/Viewer/: Readme.md  prj.conf
repo/mycode/apps/Project/Viewer/boards/: m5stack_core2_procpu.overlay
repo/mycode/apps/Project/Viewer/src/: ble.h  display.h  main.c
repo/mycode/apps/prac2/task1/: CMakeLists.txt  Readme.md  prj.conf
repo/mycode/apps/prac2/task1/boards/: disco_l475_iot1.overlay
repo/mycode/apps/prac2/task1/src/: main.c  task1.c  task1.h  task2.c  task2.h  task3.c  task3.h  task5.c  task5.h  task7.py
repo/mycode/apps/prac3/base/apps/prac3/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  README.md  prj.conf  sample.yaml
repo/mycode/apps/prac3/base/apps/prac3/src/: init_serial_test.py  main.c
repo/mycode/apps/prac3/base/include/: Si1133.h  ble_receive.h  ble_send.h  bluetooth_node.h  bluetooth_sensor_set.h  ibeacon_commands.h  kalman.h  rtc.h  sensors.h
repo/mycode/apps/prac3/base/mylib/: Si1133.c  ble_receive.c  ble_send.c  bluetooth_node.c  bluetooth_sensor_set.c  ibeacon_commands.c  kalman.c  rtc.c  sensors.c
repo/mycode/apps/prac3/disco/: Readme.md  prj.conf
repo/mycode/apps/prac3/disco/boards/: disco_l475_iot1.overlay
repo/mycode/apps/prac3/m5/: CMakeLists.txt
repo/mycode/apps/prac3/prac3 - Caleb/: CMakeLists.txt  dashboard.py  docker-compose.yml  docker-compose.yml:Zone.Identifier  prj.conf
repo/mycode/apps/s1/task1/: Readme.md  prj.conf
repo/mycode/apps/s1/task2/: Readme.md
repo/mycode/apps/s1/task3/: Readme.md  prj.conf
(+14 files in other folders)
